# JustFuckingCopy

./: .gitignore  .plane.json  CLAUDE.md  README.md
.claude/: gsd-file-manifest.json
.claude/agents/: gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-verifier.md
.claude/commands/gsd/: add-backlog.md  add-phase.md  add-tests.md  add-todo.md  audit-milestone.md  audit-uat.md  autonomous.md  check-todos.md  cleanup.md  complete-milestone.md  debug.md  discuss-phase.md  do.md  execute-phase.md  fast.md  health.md  help.md  insert-phase.md  list-phase-assumptions.md  map-codebase.md  new-milestone.md  new-project.md  next.md  note.md  pause-work.md  plan-milestone-gaps.md  plan-phase.md  plant-seed.md  pr-branch.md  profile-user.md  progress.md  quick.md  reapply-patches.md  remove-phase.md  research-phase.md  resume-work.md  review-backlog.md  review.md  session-report.md  set-profile.md  (+9 more)
.claude/get-shit-done/references/: decimal-phase-calculation.md  git-integration.md  git-planning-commit.md  model-profile-resolution.md  phase-argument-parsing.md  planning-config.md  verification-patterns.md
.claude/get-shit-done/templates/: phase-prompt.md
.claude/get-shit-done/workflows/: add-phase.md  add-tests.md  add-todo.md  audit-milestone.md  audit-uat.md  autonomous.md  check-todos.md  cleanup.md  complete-milestone.md  diagnose-issues.md  discovery-phase.md  discuss-phase.md  do.md  execute-phase.md  execute-plan.md  health.md  help.md  insert-phase.md  next.md  (+25 more)
.github/workflows/: macos-build.yml  release.yml  windows-build.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: vision_ocr.swift
src-tauri/src/: config.rs  lib.rs  main.rs  merge.rs  ollama.rs  platform.rs  state.rs  tray_badge.rs  watcher.rs
ui/: app.js  index.html  styles.css
(+29 files in other folders)
