[package]
name = "just-fucking-copy"
version = "0.1.0"
description = "Pixel-first universal copy/paste built with Rust and Tauri"
authors = ["Codex"]
edition = "2021"

[lib]
name = "just_fucking_copy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2" }
tauri-plugin-clipboard-manager = "2"

