[package]
name = "just-fucking-copy"
version = "0.1.0"
description = "Pixel-first universal copy/paste built with Rust and Tauri"
authors = ["Codex"]
edition = "2021"

[lib]
name = "just_fucking_copy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
dirs = "5"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
notify = { version = "6", features = ["macos_fsevent"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
toml = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
